@@ -132,6 +132,16 @@ static int CclSetDamageMissile(lua_State *l)
 	return 0;
 }
 
+static int CclSetMaxOpenGLTexture(lua_State *l)
+{
+	LuaCheckArgs(l, 1);
+	if (CclInConfigFile) {
+		GLMaxTextureSizeOverride = LuaToNumber(l, 1);
+	}
+
+	return 0;
+}
+
 /**
 **  Set the video resolution.
 **
@@ -967,6 +977,7 @@ void UserInterfaceCclRegister(void)
 	lua_register(Lua, "SetClickMissile", CclSetClickMissile);
 	lua_register(Lua, "SetDamageMissile", CclSetDamageMissile);
 
+	lua_register(Lua, "SetMaxOpenGLTexture", CclSetMaxOpenGLTexture);
 	lua_register(Lua, "SetVideoResolution", CclSetVideoResolution);
 	lua_register(Lua, "GetVideoResolution", CclGetVideoResolution);
 	lua_register(Lua, "SetVideoFullScreen", CclSetVideoFullScreen);
